Refactor speech handling to include OpenAI TTS voice selection; update audio playback and API key handling

--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html>
 <head>
   <meta charset="UTF-8">
@@ -105,12 +104,16 @@
       background-color: #2d5bb9 !important;
       box-shadow: 0 0 5px rgba(255, 255, 255, 0.5);
     }
+
+    #api-key-container {
+      margin-top: 8px;
+    }
   </style>
 </head>
 <body>
   <div id="settings">
     <div>
-      <label for="voice-select">Fox Voice:</label>
+      <label for="voice-select">Voice:</label>
       <select id="voice-select"></select>
     </div>
   </div>
